# AudioManager

./: AndroidMakefile  README.md  build_iOS.sh  iOSMakefile
common/include/: audio_common.h  audio_log.h  audio_manager.h
common/src/: audio_log.cc  audio_manager.cc  audio_manager_impl.cc  audio_manager_impl.h  sources.mk
docs/: AudioManage_api_ver0.6.md
engine/: audio_engine.cc  audio_engine.h  audio_engine_impl.h  sources.mk
engine/audio_ALSA/: alsa_io.cc  alsa_io.h  audio_alsa_impl.cc  audio_alsa_impl.h  circular_buffer.cc  circular_buffer.h  sources.mk
engine/audio_iOS/: AudioInputQueue.h  AudioInputQueue.mm  AudioOutputQueue.h  AudioOutputQueue.mm  AudioUnitInput.h  AudioUnitInput.mm  AudioUnitOutput.h  AudioUnitOutput.mm  audio_ios_common.h  audio_ios_impl.h  audio_ios_impl.mm  circular_buffer.cc  circular_buffer.h  sources.mk
engine/audio_openSL/: audio_opensl_impl.cc  audio_opensl_impl.h  opensl_io.c  opensl_io.h  sources.mk
jni/: Android.mk  Application.mk
test/android/AudioManagerTest/: README.md  local.properties
test/android/AudioManagerTest/app/src/main/cpp/: CMakeLists.txt  native-audio-jni.cpp
test/iOS/AudioManagerTest/AudioManagerTest.xcodeproj/: project.pbxproj
test/iOS/AudioManagerTest/AudioManagerTest.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
test/iOS/AudioManagerTest/AudioTest/: AppDelegate.h  AppDelegate.m  AudioManagerTest-Info.plist  Echo.h  Echo.mm  Record.h  Record.m  RecordViewController.h  RecordViewController.m  main.m
test/iOS/AudioManagerTest/AudioTestTests/: AudioTestTests.m
(+11 files in other folders)
